--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,18 @@
   <link href="./vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
   <link href="./vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
+  <link href="./css/loader.css" rel="stylesheet">
+
+
+  <style>
+    a {
+      cursor: pointer !important;
+    }
+  </style>
 
 </head>
 
-<body>
+<body class="dx-viewport">
 
   <div id="root"></div>
  
