--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,12 @@
   <meta property="og:title" content="Serv Evolution" />
   <meta property="og:description" content="Serv Evolution" />
   <meta name="format-detection" content="telephone=no">
-  <title>Serv Evolution - Controle de Chamados</title>
+  <title>ServEvolution</title>
 
   <link rel="stylesheet" href="./vendor/chartist/css/chartist.min.css">
   <link href="./vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
   <link href="./vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
+  <link href="./vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
   <link href="./css/loader.css" rel="stylesheet">
 
@@ -27,6 +28,30 @@
     a {
       cursor: pointer !important;
     }
+
+    .notification .title {
+        font-size: 1.25em  !important;
+        color: white !important;
+    }
+
+    .card-body {
+        padding-top: 10px;
+    }
+
+    .project-nav{
+        padding-bottom: 10px;
+    }
+
+    .spinner-border{
+        width: 5rem;
+        height: 5rem;
+        margin: 20px;
+    }
+
+    .brand-title img {
+        max-width: 150px;
+    }
+
   </style>
 
 </head>
@@ -36,8 +61,9 @@
   <div id="root"></div>
  
     <!-- INDEX -->
-    <script src="./vendor/global/global.min.js" defer></script>
-    <script src="./vendor/bootstrap-select/dist/js/bootstrap-select.min.js" defer></script>
+    <script src="./vendor/global/global.min.js"></script>
+    <script src="./vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    
     <script src="./vendor/chart.js/Chart.bundle.min.js" defer></script>                
     <script src="./vendor/peity/jquery.peity.min.js" defer></script>
     <script src="./vendor/apexchart/apexchart.js" defer></script>
@@ -50,6 +76,8 @@
     <script src="./vendor/svganimation/vivus.min.js" defer></script>
     <script src="./vendor/svganimation/svg.animation.js" defer></script>
 
+    <script src="./vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="./js/plugins-init/datatables.init.js"></script>
     
     <script src="./js/deznav-init.js" defer></script> 
     <script src="./js/custom.js" defer></script>
