--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,18 @@
             height: 2.5rem;
         }
 
+        .border-list{
+            border: 1px solid #ddd;
+        }
+
+        .mb-7px{
+            margin-bottom: 7px;
+        }
+
+        .btn-sm {
+            padding: 0.125rem .4rem;
+        }
+
         .dx-button-has-icon .dx-icon {            
             font-size: 13px !important;        
         }
